force-app/main/default/objects/TPM_Logger__c/TPM_Logger__c.object-meta.xml
<CustomObject>
    <label>Logger</label>
    <nameField>
        <displayFormat>DUR-{000000}</displayFormat>
        <label>Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logger</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>