force-app/main/default/objects/TPM_Logger__c/fields/TPM_Account__c.field-meta.xml
<CustomField>
    <fullName>TPM_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds Account Info. for Customer Extension Batch</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Logger</relationshipLabel>
    <relationshipName>Logger</relationshipName>
    <type>Lookup</type>
</CustomField>