force-app/main/default/objects/TPM_Logger__c/fields/TPM_ClassName__c.field-meta.xml
<CustomField>
    <fullName>TPM_ClassName__c</fullName>
    <description>Holds exception/error thrown apex class name.</description>
    <label>Class Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>