force-app/main/default/objects/TPM_Logger__c/fields/TPM_ComponentName__c.field-meta.xml
<CustomField>
    <fullName>TPM_ComponentName__c</fullName>
    <description>Holds exception/error thrown component (LWC) name.</description>
    <label>Component Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>