force-app/main/default/objects/TPM_Logger__c/fields/TPM_Customer_Hierarchy_Staging__c.field-meta.xml
<CustomField>
    <fullName>TPM_Customer_Hierarchy_Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Hierarchy Staging</label>
    <referenceTo>TPM_Customer_Hierarchy_Staging__c</referenceTo>
    <relationshipLabel>Logger</relationshipLabel>
    <relationshipName>Logger</relationshipName>
    <type>Lookup</type>
</CustomField>