force-app/main/default/objects/TPM_Logger__c/fields/TPM_ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>TPM_ExceptionMessage__c</fullName>
    <description>Holds exception/error message.</description>
    <label>Exception Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>