force-app/main/default/objects/TPM_Logger__c/fields/TPM_ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>TPM_ExceptionType__c</fullName>
    <description>Holds Exception / Error Type.</description>
    <label>Exception Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>