force-app/main/default/objects/TPM_Logger__c/fields/TPM_FlowName__c.field-meta.xml
<CustomField>
    <fullName>TPM_FlowName__c</fullName>
    <description>Holds Business flow name.</description>
    <label>Flow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>