force-app/main/default/objects/TPM_Logger__c/fields/TPM_GUID__c.field-meta.xml
<CustomField>
    <fullName>TPM_GUID__c</fullName>
    <description>Holds recordID / externalID for error/exceptions</description>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>