force-app/main/default/objects/TPM_Logger__c/fields/TPM_LogLevel__c.field-meta.xml
<CustomField>
    <fullName>TPM_LogLevel__c</fullName>
    <description>Hold logging level for tracking.</description>
    <label>Log Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fatal</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>