force-app/main/default/objects/TPM_Logger__c/fields/TPM_MethodName__c.field-meta.xml
<CustomField>
    <fullName>TPM_MethodName__c</fullName>
    <description>Holds exception/error thrown Apex class Method/ (LWC) JS Function name.</description>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>