force-app/main/default/objects/TPM_Logger__c/fields/TPM_Product__c.field-meta.xml
<CustomField>
    <fullName>TPM_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Holds Product Info. for Product Template Batch</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Logger</relationshipLabel>
    <relationshipName>Logger</relationshipName>
    <type>Lookup</type>
</CustomField>