force-app/main/default/objects/TPM_Logger__c/fields/TPM_RecordName__c.field-meta.xml
<CustomField>
    <fullName>TPM_RecordName__c</fullName>
    <description>Holds exception/error from Record name.</description>
    <label>Record Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>