force-app/main/default/objects/TPM_Logger__c/fields/TPM_StackTrace__c.field-meta.xml
<CustomField>
    <fullName>TPM_StackTrace__c</fullName>
    <description>Use this to record complete error message.</description>
    <label>StackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>